# GameRes

./: 运行和编译.txt
Server/: Server.sln  natvis设置.txt  protobuf.natvis  tbb.natvis
Server/CMakeLists/: CMakeLists.txt
Server/DBApp/: AppManager.cpp  AppManager.h  DBApp.cpp  DBApp.vcxproj  DBApp.vcxproj.filters  DatabaseThreadPool.h  MySqlConnection.h  NewConnection.h  ProducerConsumerQueue.h  ReadMe.txt  libmysql.lib  stdafx.cpp  vc120.ib_pdb_index  vc120.idb  vc120_ib_1.idb
Server/DBApp/DBApp.tlog/: CL.read.1.tlog  CL.write.1.tlog  DBApp.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Server/LogApp/: LogApp.cpp  LogApp.vcxproj  LogApp.vcxproj.filters  ReadMe.txt  stdafx.cpp
Server/NetApp/: Buffer.h  Connection.cpp  Connection.hpp  MessageDispatch.hpp  NetApp.cpp  NetApp.vcxproj  NetApp.vcxproj.filters  NetFrame.cpp  NetFrame.h  Observer.cpp  Observer.h  ReadMe.txt  stdafx.cpp
Server/Server/: AppInitialze.cpp  AppInitialze.h  AppManager.cpp  AppManager.h  CLogin.cpp  CLogin.h  CLogin.hpp  GameClient.cpp  GameClient.hpp  Mail.cpp  Mail.h  Server.cpp  Server.vcxproj  Server.vcxproj.filters
Server/netPack/: MessageBuf.cpp  MessageBuf.hpp  commDef.cpp  commDef.hpp  readme.txt
Server/protobuf/: NetMessage.pb.cc  NetMessage.pb.h  NetMessage.proto  NetMessage1.hpp  NetMessage1.proto  NetMessageBase1.cpp  NetMessageBase1.hpp  example.txt
Server/protobuf/google/protobuf/: unittest.pb.cc  (+4 more)
ServerApp/: ServerApp.sln
ServerApp/3rd_lib/libuv/: libuv.lib
ServerApp/ServerApp/: NetSocket.cpp  NetSocket.h  ServerApp.cpp  ServerApp.vcxproj  ServerApp.vcxproj.filters
(+2 files in other folders)
